// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match eslintrc 1`] = `
"{
  \\"globals\\": {
    \\"AbortController\\": false,
    \\"AbortSignal\\": false,
    \\"addEventListener\\": false,
    \\"alert\\": false,
    \\"AnalyserNode\\": false,
    \\"Animation\\": false,
    \\"AnimationEffectReadOnly\\": false,
    \\"AnimationEffectTiming\\": false,
    \\"AnimationEffectTimingReadOnly\\": false,
    \\"AnimationEvent\\": false,
    \\"AnimationPlaybackEvent\\": false,
    \\"AnimationTimeline\\": false,
    \\"applicationCache\\": false,
    \\"ApplicationCache\\": false,
    \\"ApplicationCacheErrorEvent\\": false,
    \\"atob\\": false,
    \\"Attr\\": false,
    \\"Audio\\": false,
    \\"AudioBuffer\\": false,
    \\"AudioBufferSourceNode\\": false,
    \\"AudioContext\\": false,
    \\"AudioDestinationNode\\": false,
    \\"AudioListener\\": false,
    \\"AudioNode\\": false,
    \\"AudioParam\\": false,
    \\"AudioProcessingEvent\\": false,
    \\"AudioScheduledSourceNode\\": false,
    \\"AudioWorkletGlobalScope \\": false,
    \\"AudioWorkletNode\\": false,
    \\"AudioWorkletProcessor\\": false,
    \\"BarProp\\": false,
    \\"BaseAudioContext\\": false,
    \\"BatteryManager\\": false,
    \\"BeforeUnloadEvent\\": false,
    \\"BiquadFilterNode\\": false,
    \\"Blob\\": false,
    \\"BlobEvent\\": false,
    \\"blur\\": false,
    \\"BroadcastChannel\\": false,
    \\"btoa\\": false,
    \\"BudgetService\\": false,
    \\"ByteLengthQueuingStrategy\\": false,
    \\"Cache\\": false,
    \\"caches\\": false,
    \\"CacheStorage\\": false,
    \\"cancelAnimationFrame\\": false,
    \\"cancelIdleCallback\\": false,
    \\"CanvasCaptureMediaStreamTrack\\": false,
    \\"CanvasGradient\\": false,
    \\"CanvasPattern\\": false,
    \\"CanvasRenderingContext2D\\": false,
    \\"ChannelMergerNode\\": false,
    \\"ChannelSplitterNode\\": false,
    \\"CharacterData\\": false,
    \\"clearInterval\\": false,
    \\"clearTimeout\\": false,
    \\"clientInformation\\": false,
    \\"ClipboardEvent\\": false,
    \\"close\\": false,
    \\"closed\\": false,
    \\"CloseEvent\\": false,
    \\"Comment\\": false,
    \\"CompositionEvent\\": false,
    \\"confirm\\": false,
    \\"console\\": false,
    \\"ConstantSourceNode\\": false,
    \\"ConvolverNode\\": false,
    \\"CountQueuingStrategy\\": false,
    \\"createImageBitmap\\": false,
    \\"Credential\\": false,
    \\"CredentialsContainer\\": false,
    \\"crypto\\": false,
    \\"Crypto\\": false,
    \\"CryptoKey\\": false,
    \\"CSS\\": false,
    \\"CSSConditionRule\\": false,
    \\"CSSFontFaceRule\\": false,
    \\"CSSGroupingRule\\": false,
    \\"CSSImportRule\\": false,
    \\"CSSKeyframeRule\\": false,
    \\"CSSKeyframesRule\\": false,
    \\"CSSMediaRule\\": false,
    \\"CSSNamespaceRule\\": false,
    \\"CSSPageRule\\": false,
    \\"CSSRule\\": false,
    \\"CSSRuleList\\": false,
    \\"CSSStyleDeclaration\\": false,
    \\"CSSStyleRule\\": false,
    \\"CSSStyleSheet\\": false,
    \\"CSSSupportsRule\\": false,
    \\"CustomElementRegistry\\": false,
    \\"customElements\\": false,
    \\"CustomEvent\\": false,
    \\"DataTransfer\\": false,
    \\"DataTransferItem\\": false,
    \\"DataTransferItemList\\": false,
    \\"defaultstatus\\": false,
    \\"defaultStatus\\": false,
    \\"DelayNode\\": false,
    \\"DeviceMotionEvent\\": false,
    \\"DeviceOrientationEvent\\": false,
    \\"devicePixelRatio\\": false,
    \\"dispatchEvent\\": false,
    \\"document\\": false,
    \\"Document\\": false,
    \\"DocumentFragment\\": false,
    \\"DocumentType\\": false,
    \\"DOMError\\": false,
    \\"DOMException\\": false,
    \\"DOMImplementation\\": false,
    \\"DOMMatrix\\": false,
    \\"DOMMatrixReadOnly\\": false,
    \\"DOMParser\\": false,
    \\"DOMPoint\\": false,
    \\"DOMPointReadOnly\\": false,
    \\"DOMQuad\\": false,
    \\"DOMRect\\": false,
    \\"DOMRectReadOnly\\": false,
    \\"DOMStringList\\": false,
    \\"DOMStringMap\\": false,
    \\"DOMTokenList\\": false,
    \\"DragEvent\\": false,
    \\"DynamicsCompressorNode\\": false,
    \\"Element\\": false,
    \\"ErrorEvent\\": false,
    \\"event\\": false,
    \\"Event\\": false,
    \\"EventSource\\": false,
    \\"EventTarget\\": false,
    \\"external\\": false,
    \\"fetch\\": false,
    \\"File\\": false,
    \\"FileList\\": false,
    \\"FileReader\\": false,
    \\"find\\": false,
    \\"focus\\": false,
    \\"FocusEvent\\": false,
    \\"FontFace\\": false,
    \\"FontFaceSetLoadEvent\\": false,
    \\"FormData\\": false,
    \\"frameElement\\": false,
    \\"frames\\": false,
    \\"GainNode\\": false,
    \\"Gamepad\\": false,
    \\"GamepadButton\\": false,
    \\"GamepadEvent\\": false,
    \\"getComputedStyle\\": false,
    \\"getSelection\\": false,
    \\"HashChangeEvent\\": false,
    \\"Headers\\": false,
    \\"history\\": false,
    \\"History\\": false,
    \\"HTMLAllCollection\\": false,
    \\"HTMLAnchorElement\\": false,
    \\"HTMLAreaElement\\": false,
    \\"HTMLAudioElement\\": false,
    \\"HTMLBaseElement\\": false,
    \\"HTMLBodyElement\\": false,
    \\"HTMLBRElement\\": false,
    \\"HTMLButtonElement\\": false,
    \\"HTMLCanvasElement\\": false,
    \\"HTMLCollection\\": false,
    \\"HTMLContentElement\\": false,
    \\"HTMLDataElement\\": false,
    \\"HTMLDataListElement\\": false,
    \\"HTMLDetailsElement\\": false,
    \\"HTMLDialogElement\\": false,
    \\"HTMLDirectoryElement\\": false,
    \\"HTMLDivElement\\": false,
    \\"HTMLDListElement\\": false,
    \\"HTMLDocument\\": false,
    \\"HTMLElement\\": false,
    \\"HTMLEmbedElement\\": false,
    \\"HTMLFieldSetElement\\": false,
    \\"HTMLFontElement\\": false,
    \\"HTMLFormControlsCollection\\": false,
    \\"HTMLFormElement\\": false,
    \\"HTMLFrameElement\\": false,
    \\"HTMLFrameSetElement\\": false,
    \\"HTMLHeadElement\\": false,
    \\"HTMLHeadingElement\\": false,
    \\"HTMLHRElement\\": false,
    \\"HTMLHtmlElement\\": false,
    \\"HTMLIFrameElement\\": false,
    \\"HTMLImageElement\\": false,
    \\"HTMLInputElement\\": false,
    \\"HTMLLabelElement\\": false,
    \\"HTMLLegendElement\\": false,
    \\"HTMLLIElement\\": false,
    \\"HTMLLinkElement\\": false,
    \\"HTMLMapElement\\": false,
    \\"HTMLMarqueeElement\\": false,
    \\"HTMLMediaElement\\": false,
    \\"HTMLMenuElement\\": false,
    \\"HTMLMetaElement\\": false,
    \\"HTMLMeterElement\\": false,
    \\"HTMLModElement\\": false,
    \\"HTMLObjectElement\\": false,
    \\"HTMLOListElement\\": false,
    \\"HTMLOptGroupElement\\": false,
    \\"HTMLOptionElement\\": false,
    \\"HTMLOptionsCollection\\": false,
    \\"HTMLOutputElement\\": false,
    \\"HTMLParagraphElement\\": false,
    \\"HTMLParamElement\\": false,
    \\"HTMLPictureElement\\": false,
    \\"HTMLPreElement\\": false,
    \\"HTMLProgressElement\\": false,
    \\"HTMLQuoteElement\\": false,
    \\"HTMLScriptElement\\": false,
    \\"HTMLSelectElement\\": false,
    \\"HTMLShadowElement\\": false,
    \\"HTMLSlotElement\\": false,
    \\"HTMLSourceElement\\": false,
    \\"HTMLSpanElement\\": false,
    \\"HTMLStyleElement\\": false,
    \\"HTMLTableCaptionElement\\": false,
    \\"HTMLTableCellElement\\": false,
    \\"HTMLTableColElement\\": false,
    \\"HTMLTableElement\\": false,
    \\"HTMLTableRowElement\\": false,
    \\"HTMLTableSectionElement\\": false,
    \\"HTMLTemplateElement\\": false,
    \\"HTMLTextAreaElement\\": false,
    \\"HTMLTimeElement\\": false,
    \\"HTMLTitleElement\\": false,
    \\"HTMLTrackElement\\": false,
    \\"HTMLUListElement\\": false,
    \\"HTMLUnknownElement\\": false,
    \\"HTMLVideoElement\\": false,
    \\"IDBCursor\\": false,
    \\"IDBCursorWithValue\\": false,
    \\"IDBDatabase\\": false,
    \\"IDBFactory\\": false,
    \\"IDBIndex\\": false,
    \\"IDBKeyRange\\": false,
    \\"IDBObjectStore\\": false,
    \\"IDBOpenDBRequest\\": false,
    \\"IDBRequest\\": false,
    \\"IDBTransaction\\": false,
    \\"IDBVersionChangeEvent\\": false,
    \\"IdleDeadline\\": false,
    \\"IIRFilterNode\\": false,
    \\"Image\\": false,
    \\"ImageBitmap\\": false,
    \\"ImageBitmapRenderingContext\\": false,
    \\"ImageCapture\\": false,
    \\"ImageData\\": false,
    \\"indexedDB\\": false,
    \\"innerHeight\\": false,
    \\"innerWidth\\": false,
    \\"InputEvent\\": false,
    \\"IntersectionObserver\\": false,
    \\"IntersectionObserverEntry\\": false,
    \\"Intl\\": false,
    \\"isSecureContext\\": false,
    \\"KeyboardEvent\\": false,
    \\"KeyframeEffect\\": false,
    \\"KeyframeEffectReadOnly\\": false,
    \\"length\\": false,
    \\"localStorage\\": false,
    \\"location\\": true,
    \\"Location\\": false,
    \\"locationbar\\": false,
    \\"matchMedia\\": false,
    \\"MediaDeviceInfo\\": false,
    \\"MediaDevices\\": false,
    \\"MediaElementAudioSourceNode\\": false,
    \\"MediaEncryptedEvent\\": false,
    \\"MediaError\\": false,
    \\"MediaKeyMessageEvent\\": false,
    \\"MediaKeySession\\": false,
    \\"MediaKeyStatusMap\\": false,
    \\"MediaKeySystemAccess\\": false,
    \\"MediaList\\": false,
    \\"MediaQueryList\\": false,
    \\"MediaQueryListEvent\\": false,
    \\"MediaRecorder\\": false,
    \\"MediaSettingsRange\\": false,
    \\"MediaSource\\": false,
    \\"MediaStream\\": false,
    \\"MediaStreamAudioDestinationNode\\": false,
    \\"MediaStreamAudioSourceNode\\": false,
    \\"MediaStreamEvent\\": false,
    \\"MediaStreamTrack\\": false,
    \\"MediaStreamTrackEvent\\": false,
    \\"menubar\\": false,
    \\"MessageChannel\\": false,
    \\"MessageEvent\\": false,
    \\"MessagePort\\": false,
    \\"MIDIAccess\\": false,
    \\"MIDIConnectionEvent\\": false,
    \\"MIDIInput\\": false,
    \\"MIDIInputMap\\": false,
    \\"MIDIMessageEvent\\": false,
    \\"MIDIOutput\\": false,
    \\"MIDIOutputMap\\": false,
    \\"MIDIPort\\": false,
    \\"MimeType\\": false,
    \\"MimeTypeArray\\": false,
    \\"MouseEvent\\": false,
    \\"moveBy\\": false,
    \\"moveTo\\": false,
    \\"MutationEvent\\": false,
    \\"MutationObserver\\": false,
    \\"MutationRecord\\": false,
    \\"name\\": false,
    \\"NamedNodeMap\\": false,
    \\"NavigationPreloadManager\\": false,
    \\"navigator\\": false,
    \\"Navigator\\": false,
    \\"NetworkInformation\\": false,
    \\"Node\\": false,
    \\"NodeFilter\\": false,
    \\"NodeIterator\\": false,
    \\"NodeList\\": false,
    \\"Notification\\": false,
    \\"OfflineAudioCompletionEvent\\": false,
    \\"OfflineAudioContext\\": false,
    \\"offscreenBuffering\\": false,
    \\"OffscreenCanvas\\": true,
    \\"onabort\\": true,
    \\"onafterprint\\": true,
    \\"onanimationend\\": true,
    \\"onanimationiteration\\": true,
    \\"onanimationstart\\": true,
    \\"onappinstalled\\": true,
    \\"onauxclick\\": true,
    \\"onbeforeinstallprompt\\": true,
    \\"onbeforeprint\\": true,
    \\"onbeforeunload\\": true,
    \\"onblur\\": true,
    \\"oncancel\\": true,
    \\"oncanplay\\": true,
    \\"oncanplaythrough\\": true,
    \\"onchange\\": true,
    \\"onclick\\": true,
    \\"onclose\\": true,
    \\"oncontextmenu\\": true,
    \\"oncuechange\\": true,
    \\"ondblclick\\": true,
    \\"ondevicemotion\\": true,
    \\"ondeviceorientation\\": true,
    \\"ondeviceorientationabsolute\\": true,
    \\"ondrag\\": true,
    \\"ondragend\\": true,
    \\"ondragenter\\": true,
    \\"ondragleave\\": true,
    \\"ondragover\\": true,
    \\"ondragstart\\": true,
    \\"ondrop\\": true,
    \\"ondurationchange\\": true,
    \\"onemptied\\": true,
    \\"onended\\": true,
    \\"onerror\\": true,
    \\"onfocus\\": true,
    \\"ongotpointercapture\\": true,
    \\"onhashchange\\": true,
    \\"oninput\\": true,
    \\"oninvalid\\": true,
    \\"onkeydown\\": true,
    \\"onkeypress\\": true,
    \\"onkeyup\\": true,
    \\"onlanguagechange\\": true,
    \\"onload\\": true,
    \\"onloadeddata\\": true,
    \\"onloadedmetadata\\": true,
    \\"onloadstart\\": true,
    \\"onlostpointercapture\\": true,
    \\"onmessage\\": true,
    \\"onmessageerror\\": true,
    \\"onmousedown\\": true,
    \\"onmouseenter\\": true,
    \\"onmouseleave\\": true,
    \\"onmousemove\\": true,
    \\"onmouseout\\": true,
    \\"onmouseover\\": true,
    \\"onmouseup\\": true,
    \\"onmousewheel\\": true,
    \\"onoffline\\": true,
    \\"ononline\\": true,
    \\"onpagehide\\": true,
    \\"onpageshow\\": true,
    \\"onpause\\": true,
    \\"onplay\\": true,
    \\"onplaying\\": true,
    \\"onpointercancel\\": true,
    \\"onpointerdown\\": true,
    \\"onpointerenter\\": true,
    \\"onpointerleave\\": true,
    \\"onpointermove\\": true,
    \\"onpointerout\\": true,
    \\"onpointerover\\": true,
    \\"onpointerup\\": true,
    \\"onpopstate\\": true,
    \\"onprogress\\": true,
    \\"onratechange\\": true,
    \\"onrejectionhandled\\": true,
    \\"onreset\\": true,
    \\"onresize\\": true,
    \\"onscroll\\": true,
    \\"onsearch\\": true,
    \\"onseeked\\": true,
    \\"onseeking\\": true,
    \\"onselect\\": true,
    \\"onstalled\\": true,
    \\"onstorage\\": true,
    \\"onsubmit\\": true,
    \\"onsuspend\\": true,
    \\"ontimeupdate\\": true,
    \\"ontoggle\\": true,
    \\"ontransitionend\\": true,
    \\"onunhandledrejection\\": true,
    \\"onunload\\": true,
    \\"onvolumechange\\": true,
    \\"onwaiting\\": true,
    \\"onwheel\\": true,
    \\"open\\": false,
    \\"openDatabase\\": false,
    \\"opener\\": false,
    \\"Option\\": false,
    \\"origin\\": false,
    \\"OscillatorNode\\": false,
    \\"outerHeight\\": false,
    \\"outerWidth\\": false,
    \\"PageTransitionEvent\\": false,
    \\"pageXOffset\\": false,
    \\"pageYOffset\\": false,
    \\"PannerNode\\": false,
    \\"parent\\": false,
    \\"Path2D\\": false,
    \\"PaymentAddress\\": false,
    \\"PaymentRequest\\": false,
    \\"PaymentRequestUpdateEvent\\": false,
    \\"PaymentResponse\\": false,
    \\"performance\\": false,
    \\"Performance\\": false,
    \\"PerformanceEntry\\": false,
    \\"PerformanceLongTaskTiming\\": false,
    \\"PerformanceMark\\": false,
    \\"PerformanceMeasure\\": false,
    \\"PerformanceNavigation\\": false,
    \\"PerformanceNavigationTiming\\": false,
    \\"PerformanceObserver\\": false,
    \\"PerformanceObserverEntryList\\": false,
    \\"PerformancePaintTiming\\": false,
    \\"PerformanceResourceTiming\\": false,
    \\"PerformanceTiming\\": false,
    \\"PeriodicWave\\": false,
    \\"Permissions\\": false,
    \\"PermissionStatus\\": false,
    \\"personalbar\\": false,
    \\"PhotoCapabilities\\": false,
    \\"Plugin\\": false,
    \\"PluginArray\\": false,
    \\"PointerEvent\\": false,
    \\"PopStateEvent\\": false,
    \\"postMessage\\": false,
    \\"Presentation\\": false,
    \\"PresentationAvailability\\": false,
    \\"PresentationConnection\\": false,
    \\"PresentationConnectionAvailableEvent\\": false,
    \\"PresentationConnectionCloseEvent\\": false,
    \\"PresentationConnectionList\\": false,
    \\"PresentationReceiver\\": false,
    \\"PresentationRequest\\": false,
    \\"print\\": false,
    \\"ProcessingInstruction\\": false,
    \\"ProgressEvent\\": false,
    \\"PromiseRejectionEvent\\": false,
    \\"prompt\\": false,
    \\"PushManager\\": false,
    \\"PushSubscription\\": false,
    \\"PushSubscriptionOptions\\": false,
    \\"queueMicrotask\\": false,
    \\"RadioNodeList\\": false,
    \\"Range\\": false,
    \\"ReadableStream\\": false,
    \\"registerProcessor\\": false,
    \\"RemotePlayback\\": false,
    \\"removeEventListener\\": false,
    \\"Request\\": false,
    \\"requestAnimationFrame\\": false,
    \\"requestIdleCallback\\": false,
    \\"resizeBy\\": false,
    \\"ResizeObserver\\": false,
    \\"ResizeObserverEntry\\": false,
    \\"resizeTo\\": false,
    \\"Response\\": false,
    \\"RTCCertificate\\": false,
    \\"RTCDataChannel\\": false,
    \\"RTCDataChannelEvent\\": false,
    \\"RTCDtlsTransport\\": false,
    \\"RTCIceCandidate\\": false,
    \\"RTCIceGatherer\\": false,
    \\"RTCIceTransport\\": false,
    \\"RTCPeerConnection\\": false,
    \\"RTCPeerConnectionIceEvent\\": false,
    \\"RTCRtpContributingSource\\": false,
    \\"RTCRtpReceiver\\": false,
    \\"RTCRtpSender\\": false,
    \\"RTCSctpTransport\\": false,
    \\"RTCSessionDescription\\": false,
    \\"RTCStatsReport\\": false,
    \\"RTCTrackEvent\\": false,
    \\"screen\\": false,
    \\"Screen\\": false,
    \\"screenLeft\\": false,
    \\"ScreenOrientation\\": false,
    \\"screenTop\\": false,
    \\"screenX\\": false,
    \\"screenY\\": false,
    \\"ScriptProcessorNode\\": false,
    \\"scroll\\": false,
    \\"scrollbars\\": false,
    \\"scrollBy\\": false,
    \\"scrollTo\\": false,
    \\"scrollX\\": false,
    \\"scrollY\\": false,
    \\"SecurityPolicyViolationEvent\\": false,
    \\"Selection\\": false,
    \\"self\\": false,
    \\"ServiceWorker\\": false,
    \\"ServiceWorkerContainer\\": false,
    \\"ServiceWorkerRegistration\\": false,
    \\"sessionStorage\\": false,
    \\"setInterval\\": false,
    \\"setTimeout\\": false,
    \\"ShadowRoot\\": false,
    \\"SharedWorker\\": false,
    \\"SourceBuffer\\": false,
    \\"SourceBufferList\\": false,
    \\"speechSynthesis\\": false,
    \\"SpeechSynthesisEvent\\": false,
    \\"SpeechSynthesisUtterance\\": false,
    \\"StaticRange\\": false,
    \\"status\\": false,
    \\"statusbar\\": false,
    \\"StereoPannerNode\\": false,
    \\"stop\\": false,
    \\"Storage\\": false,
    \\"StorageEvent\\": false,
    \\"StorageManager\\": false,
    \\"styleMedia\\": false,
    \\"StyleSheet\\": false,
    \\"StyleSheetList\\": false,
    \\"SubtleCrypto\\": false,
    \\"SVGAElement\\": false,
    \\"SVGAngle\\": false,
    \\"SVGAnimatedAngle\\": false,
    \\"SVGAnimatedBoolean\\": false,
    \\"SVGAnimatedEnumeration\\": false,
    \\"SVGAnimatedInteger\\": false,
    \\"SVGAnimatedLength\\": false,
    \\"SVGAnimatedLengthList\\": false,
    \\"SVGAnimatedNumber\\": false,
    \\"SVGAnimatedNumberList\\": false,
    \\"SVGAnimatedPreserveAspectRatio\\": false,
    \\"SVGAnimatedRect\\": false,
    \\"SVGAnimatedString\\": false,
    \\"SVGAnimatedTransformList\\": false,
    \\"SVGAnimateElement\\": false,
    \\"SVGAnimateMotionElement\\": false,
    \\"SVGAnimateTransformElement\\": false,
    \\"SVGAnimationElement\\": false,
    \\"SVGCircleElement\\": false,
    \\"SVGClipPathElement\\": false,
    \\"SVGComponentTransferFunctionElement\\": false,
    \\"SVGDefsElement\\": false,
    \\"SVGDescElement\\": false,
    \\"SVGDiscardElement\\": false,
    \\"SVGElement\\": false,
    \\"SVGEllipseElement\\": false,
    \\"SVGFEBlendElement\\": false,
    \\"SVGFEColorMatrixElement\\": false,
    \\"SVGFEComponentTransferElement\\": false,
    \\"SVGFECompositeElement\\": false,
    \\"SVGFEConvolveMatrixElement\\": false,
    \\"SVGFEDiffuseLightingElement\\": false,
    \\"SVGFEDisplacementMapElement\\": false,
    \\"SVGFEDistantLightElement\\": false,
    \\"SVGFEDropShadowElement\\": false,
    \\"SVGFEFloodElement\\": false,
    \\"SVGFEFuncAElement\\": false,
    \\"SVGFEFuncBElement\\": false,
    \\"SVGFEFuncGElement\\": false,
    \\"SVGFEFuncRElement\\": false,
    \\"SVGFEGaussianBlurElement\\": false,
    \\"SVGFEImageElement\\": false,
    \\"SVGFEMergeElement\\": false,
    \\"SVGFEMergeNodeElement\\": false,
    \\"SVGFEMorphologyElement\\": false,
    \\"SVGFEOffsetElement\\": false,
    \\"SVGFEPointLightElement\\": false,
    \\"SVGFESpecularLightingElement\\": false,
    \\"SVGFESpotLightElement\\": false,
    \\"SVGFETileElement\\": false,
    \\"SVGFETurbulenceElement\\": false,
    \\"SVGFilterElement\\": false,
    \\"SVGForeignObjectElement\\": false,
    \\"SVGGElement\\": false,
    \\"SVGGeometryElement\\": false,
    \\"SVGGradientElement\\": false,
    \\"SVGGraphicsElement\\": false,
    \\"SVGImageElement\\": false,
    \\"SVGLength\\": false,
    \\"SVGLengthList\\": false,
    \\"SVGLinearGradientElement\\": false,
    \\"SVGLineElement\\": false,
    \\"SVGMarkerElement\\": false,
    \\"SVGMaskElement\\": false,
    \\"SVGMatrix\\": false,
    \\"SVGMetadataElement\\": false,
    \\"SVGMPathElement\\": false,
    \\"SVGNumber\\": false,
    \\"SVGNumberList\\": false,
    \\"SVGPathElement\\": false,
    \\"SVGPatternElement\\": false,
    \\"SVGPoint\\": false,
    \\"SVGPointList\\": false,
    \\"SVGPolygonElement\\": false,
    \\"SVGPolylineElement\\": false,
    \\"SVGPreserveAspectRatio\\": false,
    \\"SVGRadialGradientElement\\": false,
    \\"SVGRect\\": false,
    \\"SVGRectElement\\": false,
    \\"SVGScriptElement\\": false,
    \\"SVGSetElement\\": false,
    \\"SVGStopElement\\": false,
    \\"SVGStringList\\": false,
    \\"SVGStyleElement\\": false,
    \\"SVGSVGElement\\": false,
    \\"SVGSwitchElement\\": false,
    \\"SVGSymbolElement\\": false,
    \\"SVGTextContentElement\\": false,
    \\"SVGTextElement\\": false,
    \\"SVGTextPathElement\\": false,
    \\"SVGTextPositioningElement\\": false,
    \\"SVGTitleElement\\": false,
    \\"SVGTransform\\": false,
    \\"SVGTransformList\\": false,
    \\"SVGTSpanElement\\": false,
    \\"SVGUnitTypes\\": false,
    \\"SVGUseElement\\": false,
    \\"SVGViewElement\\": false,
    \\"TaskAttributionTiming\\": false,
    \\"Text\\": false,
    \\"TextDecoder\\": false,
    \\"TextEncoder\\": false,
    \\"TextEvent\\": false,
    \\"TextMetrics\\": false,
    \\"TextTrack\\": false,
    \\"TextTrackCue\\": false,
    \\"TextTrackCueList\\": false,
    \\"TextTrackList\\": false,
    \\"TimeRanges\\": false,
    \\"toolbar\\": false,
    \\"top\\": false,
    \\"Touch\\": false,
    \\"TouchEvent\\": false,
    \\"TouchList\\": false,
    \\"TrackEvent\\": false,
    \\"TransitionEvent\\": false,
    \\"TreeWalker\\": false,
    \\"UIEvent\\": false,
    \\"URL\\": false,
    \\"URLSearchParams\\": false,
    \\"ValidityState\\": false,
    \\"visualViewport\\": false,
    \\"VisualViewport\\": false,
    \\"VTTCue\\": false,
    \\"WaveShaperNode\\": false,
    \\"WebAssembly\\": false,
    \\"WebGL2RenderingContext\\": false,
    \\"WebGLActiveInfo\\": false,
    \\"WebGLBuffer\\": false,
    \\"WebGLContextEvent\\": false,
    \\"WebGLFramebuffer\\": false,
    \\"WebGLProgram\\": false,
    \\"WebGLQuery\\": false,
    \\"WebGLRenderbuffer\\": false,
    \\"WebGLRenderingContext\\": false,
    \\"WebGLSampler\\": false,
    \\"WebGLShader\\": false,
    \\"WebGLShaderPrecisionFormat\\": false,
    \\"WebGLSync\\": false,
    \\"WebGLTexture\\": false,
    \\"WebGLTransformFeedback\\": false,
    \\"WebGLUniformLocation\\": false,
    \\"WebGLVertexArrayObject\\": false,
    \\"WebSocket\\": false,
    \\"WheelEvent\\": false,
    \\"window\\": false,
    \\"Window\\": false,
    \\"Worker\\": false,
    \\"WritableStream\\": false,
    \\"XMLDocument\\": false,
    \\"XMLHttpRequest\\": false,
    \\"XMLHttpRequestEventTarget\\": false,
    \\"XMLHttpRequestUpload\\": false,
    \\"XMLSerializer\\": false,
    \\"XPathEvaluator\\": false,
    \\"XPathExpression\\": false,
    \\"XPathResult\\": false,
    \\"XSLTProcessor\\": false,
    \\"exports\\": true,
    \\"global\\": false,
    \\"module\\": false,
    \\"require\\": false,
    \\"Array\\": false,
    \\"ArrayBuffer\\": false,
    \\"Boolean\\": false,
    \\"constructor\\": false,
    \\"DataView\\": false,
    \\"Date\\": false,
    \\"decodeURI\\": false,
    \\"decodeURIComponent\\": false,
    \\"encodeURI\\": false,
    \\"encodeURIComponent\\": false,
    \\"Error\\": false,
    \\"escape\\": false,
    \\"eval\\": false,
    \\"EvalError\\": false,
    \\"Float32Array\\": false,
    \\"Float64Array\\": false,
    \\"Function\\": false,
    \\"hasOwnProperty\\": false,
    \\"Infinity\\": false,
    \\"Int16Array\\": false,
    \\"Int32Array\\": false,
    \\"Int8Array\\": false,
    \\"isFinite\\": false,
    \\"isNaN\\": false,
    \\"isPrototypeOf\\": false,
    \\"JSON\\": false,
    \\"Map\\": false,
    \\"Math\\": false,
    \\"NaN\\": false,
    \\"Number\\": false,
    \\"Object\\": false,
    \\"parseFloat\\": false,
    \\"parseInt\\": false,
    \\"Promise\\": false,
    \\"propertyIsEnumerable\\": false,
    \\"Proxy\\": false,
    \\"RangeError\\": false,
    \\"ReferenceError\\": false,
    \\"Reflect\\": false,
    \\"RegExp\\": false,
    \\"Set\\": false,
    \\"String\\": false,
    \\"Symbol\\": false,
    \\"SyntaxError\\": false,
    \\"toLocaleString\\": false,
    \\"toString\\": false,
    \\"TypeError\\": false,
    \\"Uint16Array\\": false,
    \\"Uint32Array\\": false,
    \\"Uint8Array\\": false,
    \\"Uint8ClampedArray\\": false,
    \\"undefined\\": false,
    \\"unescape\\": false,
    \\"URIError\\": false,
    \\"valueOf\\": false,
    \\"WeakMap\\": false,
    \\"WeakSet\\": false,
    \\"afterAll\\": false,
    \\"afterEach\\": false,
    \\"beforeAll\\": false,
    \\"beforeEach\\": false,
    \\"describe\\": false,
    \\"expect\\": false,
    \\"fdescribe\\": false,
    \\"fit\\": false,
    \\"it\\": false,
    \\"jest\\": false,
    \\"pit\\": false,
    \\"test\\": false,
    \\"xdescribe\\": false,
    \\"xit\\": false,
    \\"xtest\\": false,
    \\"__dirname\\": false,
    \\"__filename\\": false,
    \\"Buffer\\": false,
    \\"clearImmediate\\": false,
    \\"process\\": false,
    \\"setImmediate\\": false,
    \\"jasmine\\": false,
    \\"pending\\": false,
    \\"fail\\": false,
    \\"runs\\": false,
    \\"spyOn\\": false,
    \\"spyOnProperty\\": false,
    \\"waits\\": false,
    \\"waitsFor\\": false
  },
  \\"env\\": {
    \\"browser\\": true,
    \\"commonjs\\": true,
    \\"es6\\": true,
    \\"jest\\": true,
    \\"node\\": true,
    \\"jest/globals\\": true,
    \\"jasmine\\": true,
    \\"shared-node-browser\\": true
  },
  \\"rules\\": {
    \\"array-callback-return\\": \\"warn\\",
    \\"default-case\\": [
      \\"warn\\",
      {
        \\"commentPattern\\": \\"^no default$\\"
      }
    ],
    \\"dot-location\\": [
      \\"off\\",
      \\"property\\"
    ],
    \\"eqeqeq\\": [
      \\"warn\\",
      \\"smart\\"
    ],
    \\"new-parens\\": \\"off\\",
    \\"no-array-constructor\\": \\"off\\",
    \\"no-caller\\": \\"warn\\",
    \\"no-cond-assign\\": [
      \\"warn\\",
      \\"except-parens\\"
    ],
    \\"no-const-assign\\": \\"warn\\",
    \\"no-control-regex\\": \\"warn\\",
    \\"no-delete-var\\": \\"warn\\",
    \\"no-dupe-args\\": \\"warn\\",
    \\"no-dupe-class-members\\": \\"warn\\",
    \\"no-dupe-keys\\": \\"warn\\",
    \\"no-duplicate-case\\": \\"warn\\",
    \\"no-empty-character-class\\": \\"warn\\",
    \\"no-empty-pattern\\": \\"warn\\",
    \\"no-eval\\": \\"warn\\",
    \\"no-ex-assign\\": \\"warn\\",
    \\"no-extend-native\\": \\"warn\\",
    \\"no-extra-bind\\": \\"warn\\",
    \\"no-extra-label\\": \\"warn\\",
    \\"no-fallthrough\\": \\"warn\\",
    \\"no-func-assign\\": \\"warn\\",
    \\"no-implied-eval\\": \\"warn\\",
    \\"no-invalid-regexp\\": \\"warn\\",
    \\"no-iterator\\": \\"warn\\",
    \\"no-label-var\\": \\"warn\\",
    \\"no-labels\\": [
      \\"warn\\",
      {
        \\"allowLoop\\": true,
        \\"allowSwitch\\": false
      }
    ],
    \\"no-lone-blocks\\": \\"warn\\",
    \\"no-loop-func\\": \\"warn\\",
    \\"no-mixed-operators\\": [
      0,
      {
        \\"groups\\": [
          [
            \\"&\\",
            \\"|\\",
            \\"^\\",
            \\"~\\",
            \\"<<\\",
            \\">>\\",
            \\">>>\\"
          ],
          [
            \\"==\\",
            \\"!=\\",
            \\"===\\",
            \\"!==\\",
            \\">\\",
            \\">=\\",
            \\"<\\",
            \\"<=\\"
          ],
          [
            \\"&&\\",
            \\"||\\"
          ],
          [
            \\"in\\",
            \\"instanceof\\"
          ]
        ],
        \\"allowSamePrecedence\\": false
      }
    ],
    \\"no-multi-str\\": \\"warn\\",
    \\"no-native-reassign\\": \\"warn\\",
    \\"no-negated-in-lhs\\": \\"warn\\",
    \\"no-new-func\\": \\"warn\\",
    \\"no-new-object\\": \\"warn\\",
    \\"no-new-symbol\\": \\"warn\\",
    \\"no-new-wrappers\\": \\"warn\\",
    \\"no-obj-calls\\": \\"warn\\",
    \\"no-octal\\": \\"warn\\",
    \\"no-octal-escape\\": \\"warn\\",
    \\"no-redeclare\\": \\"warn\\",
    \\"no-regex-spaces\\": \\"warn\\",
    \\"no-restricted-syntax\\": [
      \\"warn\\",
      \\"WithStatement\\"
    ],
    \\"no-script-url\\": \\"warn\\",
    \\"no-self-assign\\": \\"warn\\",
    \\"no-self-compare\\": \\"warn\\",
    \\"no-sequences\\": \\"warn\\",
    \\"no-shadow-restricted-names\\": \\"warn\\",
    \\"no-sparse-arrays\\": \\"warn\\",
    \\"no-template-curly-in-string\\": \\"warn\\",
    \\"no-this-before-super\\": \\"warn\\",
    \\"no-throw-literal\\": \\"warn\\",
    \\"no-undef\\": \\"error\\",
    \\"no-restricted-globals\\": [
      \\"error\\",
      \\"addEventListener\\",
      \\"blur\\",
      \\"close\\",
      \\"closed\\",
      \\"confirm\\",
      \\"defaultStatus\\",
      \\"defaultstatus\\",
      \\"event\\",
      \\"external\\",
      \\"find\\",
      \\"focus\\",
      \\"frameElement\\",
      \\"frames\\",
      \\"history\\",
      \\"innerHeight\\",
      \\"innerWidth\\",
      \\"length\\",
      \\"location\\",
      \\"locationbar\\",
      \\"menubar\\",
      \\"moveBy\\",
      \\"moveTo\\",
      \\"name\\",
      \\"onblur\\",
      \\"onerror\\",
      \\"onfocus\\",
      \\"onload\\",
      \\"onresize\\",
      \\"onunload\\",
      \\"open\\",
      \\"opener\\",
      \\"opera\\",
      \\"outerHeight\\",
      \\"outerWidth\\",
      \\"pageXOffset\\",
      \\"pageYOffset\\",
      \\"parent\\",
      \\"print\\",
      \\"removeEventListener\\",
      \\"resizeBy\\",
      \\"resizeTo\\",
      \\"screen\\",
      \\"screenLeft\\",
      \\"screenTop\\",
      \\"screenX\\",
      \\"screenY\\",
      \\"scroll\\",
      \\"scrollbars\\",
      \\"scrollBy\\",
      \\"scrollTo\\",
      \\"scrollX\\",
      \\"scrollY\\",
      \\"self\\",
      \\"status\\",
      \\"statusbar\\",
      \\"stop\\",
      \\"toolbar\\",
      \\"top\\"
    ],
    \\"no-unexpected-multiline\\": 0,
    \\"no-unreachable\\": \\"warn\\",
    \\"no-unused-expressions\\": [
      \\"error\\",
      {
        \\"allowShortCircuit\\": true,
        \\"allowTernary\\": true,
        \\"allowTaggedTemplates\\": true
      }
    ],
    \\"no-unused-labels\\": \\"warn\\",
    \\"no-unused-vars\\": [
      \\"off\\",
      {
        \\"args\\": \\"none\\",
        \\"ignoreRestSiblings\\": true
      }
    ],
    \\"no-use-before-define\\": [
      \\"warn\\",
      {
        \\"functions\\": false,
        \\"classes\\": false,
        \\"variables\\": false
      }
    ],
    \\"no-useless-computed-key\\": \\"warn\\",
    \\"no-useless-concat\\": \\"warn\\",
    \\"no-useless-constructor\\": \\"warn\\",
    \\"no-useless-escape\\": \\"warn\\",
    \\"no-useless-rename\\": [
      \\"warn\\",
      {
        \\"ignoreDestructuring\\": false,
        \\"ignoreImport\\": false,
        \\"ignoreExport\\": false
      }
    ],
    \\"no-with\\": \\"warn\\",
    \\"no-whitespace-before-property\\": \\"off\\",
    \\"require-yield\\": \\"warn\\",
    \\"rest-spread-spacing\\": [
      \\"off\\",
      \\"never\\"
    ],
    \\"strict\\": [
      \\"warn\\",
      \\"never\\"
    ],
    \\"unicode-bom\\": [
      \\"off\\",
      \\"never\\"
    ],
    \\"use-isnan\\": \\"warn\\",
    \\"valid-typeof\\": \\"warn\\",
    \\"no-restricted-properties\\": [
      \\"error\\",
      {
        \\"object\\": \\"require\\",
        \\"property\\": \\"ensure\\",
        \\"message\\": \\"Please use import() instead. More info: https://facebook.github.io/create-react-app/docs/code-splitting\\"
      },
      {
        \\"object\\": \\"System\\",
        \\"property\\": \\"import\\",
        \\"message\\": \\"Please use import() instead. More info: https://facebook.github.io/create-react-app/docs/code-splitting\\"
      }
    ],
    \\"getter-return\\": \\"warn\\",
    \\"import/first\\": \\"error\\",
    \\"import/no-amd\\": \\"error\\",
    \\"import/no-webpack-loader-syntax\\": \\"error\\",
    \\"react/forbid-foreign-prop-types\\": [
      \\"warn\\",
      {
        \\"allowInPropTypes\\": true
      }
    ],
    \\"react/jsx-no-comment-textnodes\\": 2,
    \\"react/jsx-no-duplicate-props\\": [
      2,
      {
        \\"ignoreCase\\": true
      }
    ],
    \\"react/jsx-no-target-blank\\": 2,
    \\"react/jsx-no-undef\\": 2,
    \\"react/jsx-pascal-case\\": [
      \\"warn\\",
      {
        \\"allowAllCaps\\": true,
        \\"ignore\\": []
      }
    ],
    \\"react/jsx-uses-react\\": 2,
    \\"react/jsx-uses-vars\\": 2,
    \\"react/no-danger-with-children\\": 2,
    \\"react/no-direct-mutation-state\\": 2,
    \\"react/no-is-mounted\\": 2,
    \\"react/no-typos\\": \\"error\\",
    \\"react/react-in-jsx-scope\\": 2,
    \\"react/require-render-return\\": 2,
    \\"react/style-prop-object\\": \\"warn\\",
    \\"jsx-a11y/accessible-emoji\\": \\"warn\\",
    \\"jsx-a11y/alt-text\\": \\"warn\\",
    \\"jsx-a11y/anchor-has-content\\": \\"warn\\",
    \\"jsx-a11y/anchor-is-valid\\": [
      \\"warn\\",
      {
        \\"aspects\\": [
          \\"noHref\\",
          \\"invalidHref\\"
        ]
      }
    ],
    \\"jsx-a11y/aria-activedescendant-has-tabindex\\": \\"warn\\",
    \\"jsx-a11y/aria-props\\": \\"warn\\",
    \\"jsx-a11y/aria-proptypes\\": \\"warn\\",
    \\"jsx-a11y/aria-role\\": \\"warn\\",
    \\"jsx-a11y/aria-unsupported-elements\\": \\"warn\\",
    \\"jsx-a11y/heading-has-content\\": \\"warn\\",
    \\"jsx-a11y/iframe-has-title\\": \\"warn\\",
    \\"jsx-a11y/img-redundant-alt\\": \\"warn\\",
    \\"jsx-a11y/no-access-key\\": \\"warn\\",
    \\"jsx-a11y/no-distracting-elements\\": \\"warn\\",
    \\"jsx-a11y/no-redundant-roles\\": \\"warn\\",
    \\"jsx-a11y/role-has-required-aria-props\\": \\"warn\\",
    \\"jsx-a11y/role-supports-aria-props\\": \\"warn\\",
    \\"jsx-a11y/scope\\": \\"warn\\",
    \\"flowtype/define-flow-type\\": 1,
    \\"flowtype/require-valid-file-annotation\\": 0,
    \\"flowtype/use-flow-type\\": 1,
    \\"react/display-name\\": 2,
    \\"react/jsx-key\\": 2,
    \\"react/no-children-prop\\": 2,
    \\"react/no-deprecated\\": 2,
    \\"react/no-find-dom-node\\": 2,
    \\"react/no-render-return-value\\": 2,
    \\"react/no-string-refs\\": 2,
    \\"react/no-unescaped-entities\\": 2,
    \\"react/no-unknown-property\\": 2,
    \\"react/no-unsafe\\": 0,
    \\"react/prop-types\\": 2,
    \\"flowtype/boolean-style\\": [
      \\"off\\",
      \\"boolean\\"
    ],
    \\"flowtype/delimiter-dangle\\": \\"off\\",
    \\"flowtype/generic-spacing\\": [
      \\"off\\",
      \\"never\\"
    ],
    \\"flowtype/no-mixed\\": 0,
    \\"flowtype/no-types-missing-file-annotation\\": 2,
    \\"flowtype/no-weak-types\\": 0,
    \\"flowtype/require-parameter-type\\": 0,
    \\"flowtype/require-return-type\\": 0,
    \\"flowtype/semi\\": \\"off\\",
    \\"flowtype/space-after-type-colon\\": [
      \\"off\\",
      \\"always\\"
    ],
    \\"flowtype/space-before-generic-bracket\\": [
      \\"off\\",
      \\"never\\"
    ],
    \\"flowtype/space-before-type-colon\\": [
      \\"off\\",
      \\"never\\"
    ],
    \\"flowtype/type-id-match\\": 0,
    \\"flowtype/union-intersection-spacing\\": [
      \\"off\\",
      \\"always\\"
    ],
    \\"jest/no-alias-methods\\": \\"warn\\",
    \\"jest/no-disabled-tests\\": \\"warn\\",
    \\"jest/no-focused-tests\\": \\"error\\",
    \\"jest/no-identical-title\\": \\"error\\",
    \\"jest/no-jest-import\\": \\"error\\",
    \\"jest/no-jasmine-globals\\": \\"warn\\",
    \\"jest/no-test-prefixes\\": \\"error\\",
    \\"jest/valid-describe\\": \\"error\\",
    \\"jest/valid-expect\\": \\"error\\",
    \\"jest/valid-expect-in-promise\\": \\"error\\",
    \\"@typescript-eslint/adjacent-overload-signatures\\": \\"error\\",
    \\"@typescript-eslint/array-type\\": \\"error\\",
    \\"@typescript-eslint/ban-types\\": \\"error\\",
    \\"camelcase\\": \\"off\\",
    \\"@typescript-eslint/camelcase\\": \\"error\\",
    \\"@typescript-eslint/class-name-casing\\": \\"error\\",
    \\"@typescript-eslint/explicit-function-return-type\\": \\"warn\\",
    \\"@typescript-eslint/explicit-member-accessibility\\": \\"error\\",
    \\"indent\\": \\"off\\",
    \\"@typescript-eslint/indent\\": \\"off\\",
    \\"@typescript-eslint/interface-name-prefix\\": \\"error\\",
    \\"@typescript-eslint/member-delimiter-style\\": \\"off\\",
    \\"@typescript-eslint/no-angle-bracket-type-assertion\\": \\"error\\",
    \\"@typescript-eslint/no-array-constructor\\": \\"error\\",
    \\"@typescript-eslint/no-empty-interface\\": \\"error\\",
    \\"@typescript-eslint/no-explicit-any\\": \\"warn\\",
    \\"@typescript-eslint/no-inferrable-types\\": \\"error\\",
    \\"@typescript-eslint/no-misused-new\\": \\"error\\",
    \\"@typescript-eslint/no-namespace\\": \\"error\\",
    \\"@typescript-eslint/no-non-null-assertion\\": \\"error\\",
    \\"@typescript-eslint/no-object-literal-type-assertion\\": \\"error\\",
    \\"@typescript-eslint/no-parameter-properties\\": \\"error\\",
    \\"@typescript-eslint/no-triple-slash-reference\\": \\"error\\",
    \\"@typescript-eslint/no-unused-vars\\": \\"warn\\",
    \\"@typescript-eslint/no-use-before-define\\": \\"error\\",
    \\"@typescript-eslint/no-var-requires\\": \\"error\\",
    \\"@typescript-eslint/prefer-interface\\": \\"error\\",
    \\"@typescript-eslint/prefer-namespace-keyword\\": \\"error\\",
    \\"@typescript-eslint/type-annotation-spacing\\": \\"off\\",
    \\"arrow-body-style\\": 0,
    \\"curly\\": [
      \\"error\\",
      \\"all\\"
    ],
    \\"lines-around-comment\\": 0,
    \\"max-len\\": 0,
    \\"no-confusing-arrow\\": 0,
    \\"no-tabs\\": 0,
    \\"prefer-arrow-callback\\": 0,
    \\"quotes\\": 0,
    \\"array-bracket-newline\\": \\"off\\",
    \\"array-bracket-spacing\\": \\"off\\",
    \\"array-element-newline\\": \\"off\\",
    \\"arrow-parens\\": \\"off\\",
    \\"arrow-spacing\\": \\"off\\",
    \\"block-spacing\\": \\"off\\",
    \\"brace-style\\": \\"off\\",
    \\"comma-dangle\\": \\"off\\",
    \\"comma-spacing\\": \\"off\\",
    \\"comma-style\\": \\"off\\",
    \\"computed-property-spacing\\": \\"off\\",
    \\"eol-last\\": \\"off\\",
    \\"func-call-spacing\\": \\"off\\",
    \\"function-paren-newline\\": \\"off\\",
    \\"generator-star\\": \\"off\\",
    \\"generator-star-spacing\\": \\"off\\",
    \\"implicit-arrow-linebreak\\": \\"off\\",
    \\"indent-legacy\\": \\"off\\",
    \\"jsx-quotes\\": \\"off\\",
    \\"key-spacing\\": \\"off\\",
    \\"keyword-spacing\\": \\"off\\",
    \\"linebreak-style\\": \\"off\\",
    \\"multiline-ternary\\": \\"off\\",
    \\"newline-per-chained-call\\": \\"off\\",
    \\"no-arrow-condition\\": \\"off\\",
    \\"no-comma-dangle\\": \\"off\\",
    \\"no-extra-parens\\": \\"off\\",
    \\"no-extra-semi\\": \\"off\\",
    \\"no-floating-decimal\\": \\"off\\",
    \\"no-mixed-spaces-and-tabs\\": \\"off\\",
    \\"no-multi-spaces\\": \\"off\\",
    \\"no-multiple-empty-lines\\": \\"off\\",
    \\"no-reserved-keys\\": \\"off\\",
    \\"no-space-before-semi\\": \\"off\\",
    \\"no-spaced-func\\": \\"off\\",
    \\"no-trailing-spaces\\": \\"off\\",
    \\"no-wrap-func\\": \\"off\\",
    \\"nonblock-statement-body-position\\": \\"off\\",
    \\"object-curly-newline\\": \\"off\\",
    \\"object-curly-spacing\\": \\"off\\",
    \\"object-property-newline\\": \\"off\\",
    \\"one-var-declaration-per-line\\": \\"off\\",
    \\"operator-linebreak\\": \\"off\\",
    \\"padded-blocks\\": \\"off\\",
    \\"quote-props\\": \\"off\\",
    \\"semi\\": \\"off\\",
    \\"semi-spacing\\": \\"off\\",
    \\"semi-style\\": \\"off\\",
    \\"space-after-function-name\\": \\"off\\",
    \\"space-after-keywords\\": \\"off\\",
    \\"space-before-blocks\\": \\"off\\",
    \\"space-before-function-paren\\": \\"off\\",
    \\"space-before-function-parentheses\\": \\"off\\",
    \\"space-before-keywords\\": \\"off\\",
    \\"space-in-brackets\\": \\"off\\",
    \\"space-in-parens\\": \\"off\\",
    \\"space-infix-ops\\": \\"off\\",
    \\"space-return-throw-case\\": \\"off\\",
    \\"space-unary-ops\\": \\"off\\",
    \\"space-unary-word-ops\\": \\"off\\",
    \\"switch-colon-spacing\\": \\"off\\",
    \\"template-curly-spacing\\": \\"off\\",
    \\"template-tag-spacing\\": \\"off\\",
    \\"wrap-iife\\": \\"off\\",
    \\"wrap-regex\\": \\"off\\",
    \\"yield-star-spacing\\": \\"off\\",
    \\"flowtype/object-type-delimiter\\": \\"off\\",
    \\"react/jsx-child-element-spacing\\": \\"off\\",
    \\"react/jsx-closing-bracket-location\\": \\"off\\",
    \\"react/jsx-closing-tag-location\\": \\"off\\",
    \\"react/jsx-curly-spacing\\": \\"off\\",
    \\"react/jsx-equals-spacing\\": \\"off\\",
    \\"react/jsx-first-prop-new-line\\": \\"off\\",
    \\"react/jsx-indent\\": \\"off\\",
    \\"react/jsx-indent-props\\": \\"off\\",
    \\"react/jsx-max-props-per-line\\": \\"off\\",
    \\"react/jsx-one-expression-per-line\\": \\"off\\",
    \\"react/jsx-props-no-multi-spaces\\": \\"off\\",
    \\"react/jsx-space-before-closing\\": \\"off\\",
    \\"react/jsx-tag-spacing\\": \\"off\\",
    \\"react/jsx-wrap-multilines\\": \\"off\\",
    \\"react/self-closing-comp\\": \\"off\\",
    \\"prettier/prettier\\": [
      \\"error\\",
      {
        \\"trailingComma\\": \\"all\\",
        \\"bracketSpacing\\": false
      }
    ],
    \\"newline-before-return\\": \\"error\\",
    \\"yoda\\": [
      \\"error\\",
      \\"never\\",
      {
        \\"exceptRange\\": true,
        \\"onlyEquality\\": false
      }
    ],
    \\"import/prefer-default-export\\": \\"off\\",
    \\"no-console\\": \\"warn\\",
    \\"no-debugger\\": \\"warn\\",
    \\"react/jsx-filename-extension\\": \\"off\\",
    \\"react/prefer-stateless-function\\": \\"warn\\",
    \\"jsx-a11y/href-no-hash\\": \\"off\\",
    \\"no-irregular-whitespace\\": [
      \\"off\\"
    ]
  },
  \\"parserOptions\\": {
    \\"ecmaFeatures\\": {
      \\"globalReturn\\": true,
      \\"jsx\\": true
    },
    \\"ecmaVersion\\": 2018,
    \\"sourceType\\": \\"module\\"
  },
  \\"root\\": true,
  \\"parser\\": \\"/Users/marcel/work/ableneo/tools/node_modules/@typescript-eslint/parser/dist/parser.js\\",
  \\"plugins\\": [
    \\"import\\",
    \\"flowtype\\",
    \\"jsx-a11y\\",
    \\"react\\",
    \\"jest\\",
    \\"@typescript-eslint\\",
    \\"prettier\\"
  ],
  \\"settings\\": {
    \\"react\\": {
      \\"version\\": \\"detect\\"
    },
    \\"flowtype\\": {
      \\"onlyFilesWithFlowAnnotation\\": false
    }
  },
  \\"extends\\": [
    \\"react-app\\",
    \\"plugin:react/recommended\\",
    \\"plugin:flowtype/recommended\\",
    \\"plugin:jest/recommended\\",
    \\"plugin:@typescript-eslint/recommended\\",
    \\"prettier\\",
    \\"prettier/flowtype\\",
    \\"prettier/@typescript-eslint\\",
    \\"prettier/react\\"
  ]
}
"
`;

exports[`match for flow 1`] = `
"// @flow
// eslint-disable-next-line
import React from 'react'

/* eslint-disable no-unused-vars */

const ComponentZeroProp = () => <input />;
const ComponentZeroProp1 = () => <div />;
const ComponentOneProp = one => <input one={one} />;
const ComponentTwoProp = (one, two) => <input one={one} two={two} />;
const ComponentTreeProp = (one, two, tree) => (
  <input one={one} two={two} tree={tree} />
);
const ComponentFourProp = (one, two, tree, four) => (
  <input one={one} two={two} tree={tree} four={four} />
);
const ComponentFiveProp = (one, two, tree, four, five) => (
  <input one={one} two={two} tree={tree} four={four} five={five} />
);
const ComponentSixProp = (one, two, tree, four, five, six) => (
  <input one={one} two={two} tree={tree} four={four} five={five} six={six} />
);
const ComponentSevenProp = (one, two, tree, four, five, six, seven) => (
  <input
    one={one}
    two={two}
    tree={tree}
    four={four}
    five={five}
    six={six}
    seven={seven}
  />
);

const ComponentText0 = () => <input text=\\"some text\\" />;
const ComponentText1 = () => <input text={\\"some text\\"} />;
const ComponentText2 = () => <input text=\\"some text\\" />;
const ComponentText3 = () => <input text={\\"some text\\"} />;
const ComponentText4 = () => <input text={\\"'some' text\\"} />;
const ComponentText5 = () => <input text={\\"'some' text\\"} />;
const ComponentText6 = () => <input text='\\"some\\" text' />;
const ComponentText7 = text => <input text={\\"'some' \\" + text + \\" text\\"} />;
const ComponentText8 = text => <input text={\`\${text}\`} />;

const array = [];
const array1 = [\\"\\"];
const array2 = [\\"one\\", \\"two\\"];
const array3 = [\\"one\\", \\"two\\", \\"tree\\"];
const array4 = [\\"one\\", \\"two\\", \\"tree\\"];

const object = {};
const object1 = {\\"1\\": \\"test\\"};
const object2 = {\\"1\\": \\"test\\"};
const object3 = {\\"1\\": \\"test\\"};
const object4 = {\\"1\\": \\"test\\", \\"2\\": \\"test\\"};
const object5 = {
  \\"1\\": \\"test\\",
  \\"2\\": \\"test\\",
};
const x = a => (a ? 1 : 2);

function testNewLineBeforeReturn(z) {
  const y = z;

  return y;
}

interface X {
  x: string;
}

interface Y {
  y: string;
}

type XY = X & Y;
type XYZ = XY & {z: string};

const handleSizeValue = 1;
const percentage = 1;

const offset = (handleSizeValue / 2) * (1 - percentage / 0.5);

export const mod = (dividend: number, divisor: number): number =>
  ((dividend % divisor) + divisor) % divisor;
/* eslint-enable no-unused-vars */
"
`;

exports[`match for typescipt 1`] = `
"// eslint-disable-next-line
import React from 'react'

/* eslint-disable no-unused-vars */

const ComponentZeroProp = () => <input />;
const ComponentZeroProp1 = () => <div />;
const ComponentOneProp = one => <input one={one} />;
const ComponentTwoProp = (one, two) => <input one={one} two={two} />;
const ComponentTreeProp = (one, two, tree) => (
  <input one={one} two={two} tree={tree} />
);
const ComponentFourProp = (one, two, tree, four) => (
  <input one={one} two={two} tree={tree} four={four} />
);
const ComponentFiveProp = (one, two, tree, four, five) => (
  <input one={one} two={two} tree={tree} four={four} five={five} />
);
const ComponentSixProp = (one, two, tree, four, five, six) => (
  <input one={one} two={two} tree={tree} four={four} five={five} six={six} />
);
const ComponentSevenProp = (one, two, tree, four, five, six, seven) => (
  <input
    one={one}
    two={two}
    tree={tree}
    four={four}
    five={five}
    six={six}
    seven={seven}
  />
);

const ComponentText0 = () => <input text=\\"some text\\" />;
const ComponentText1 = () => <input text={\\"some text\\"} />;
const ComponentText2 = () => <input text=\\"some text\\" />;
const ComponentText3 = () => <input text={\\"some text\\"} />;
const ComponentText4 = () => <input text={\\"'some' text\\"} />;
const ComponentText5 = () => <input text={\\"'some' text\\"} />;
const ComponentText6 = () => <input text='\\"some\\" text' />;
const ComponentText7 = text => <input text={\\"'some' \\" + text + \\" text\\"} />;
const ComponentText8 = text => <input text={\`\${text}\`} />;

const array = [];
const array1 = [\\"\\"];
const array2 = [\\"one\\", \\"two\\"];
const array3 = [\\"one\\", \\"two\\", \\"tree\\"];
const array4 = [\\"one\\", \\"two\\", \\"tree\\"];

const object = {};
const object1 = {\\"1\\": \\"test\\"};
const object2 = {\\"1\\": \\"test\\"};
const object3 = {\\"1\\": \\"test\\"};
const object4 = {\\"1\\": \\"test\\", \\"2\\": \\"test\\"};
const object5 = {
  \\"1\\": \\"test\\",
  \\"2\\": \\"test\\",
};
const x = a => (a ? 1 : 2);

function testNewLineBeforeReturn(z) {
  const y = z;

  return y;
}

interface X {
  x: string;
}

interface Y {
  y: string;
}

type XY = X & Y;
type XYZ = XY & {z: string};

const handleSizeValue = 1;
const percentage = 1;

const offset = (handleSizeValue / 2) * (1 - percentage / 0.5);

export const mod = (dividend: number, divisor: number): number =>
  ((dividend % divisor) + divisor) % divisor;
/* eslint-enable no-unused-vars */
"
`;
